--- a/JCashMachineThailand/Views/Shared/_Layout.cshtml
+++ b/JCashMachineThailand/Views/Shared/_Layout.cshtml
@@ -3,23 +3,25 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - JCM Thailand</title>    
+    <title>@ViewBag.Title - JCM Thailand</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <link rel="stylesheet" type="text/css" href="~/Content/custom.layout.css">
 </head>
 <body>
     <!--  Navigation Bar -->
-    <nav class="navbar navbar-expand-md bg-dark navbar-dark fixed-top">
+    <nav class="navbar navbar-expand-md">
+        <!--navbar  navbar-expand-md navbar-dark fixed-top bg-dark-->
         <!-- Brand -->
         <a class="navbar-brand" href="/Home/About">[ JCM-Thailand ]</a>
         <!-- Toggler/collapsibe Button -->
         <button type="button" class="navbar-toggler" data-toggle="collapse" data-target="#navMenu">
-            <span class="navbar-toggler-icon"></span>
+            <span class="carousel-control-prev-icon"></span>
         </button>
         <!-- Navbar links -->
         <div class="collapse navbar-collapse" id="navMenu">
             <ul class="navbar-nav ml-auto">
-                <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { @class="nav-link"})</li>
+                <li class="nav-item">@Html.ActionLink("Home", "Index", "Home", new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("About", "About", "Home", new { @class = "nav-link" })</li>
                 <li class="nav-item">@Html.ActionLink("Contact", "Contact", "Home", new { @class = "nav-link" })</li>
             </ul>
