--- a/JCashMachineThailand/Content/custom.layout.css
+++ b/JCashMachineThailand/Content/custom.layout.css
@@ -1,5 +1,20 @@
-﻿.navbar{
-    margin-top:-50px;
-    border:dotted;
-    border-color:red;
+﻿body {
+    padding-top: 0px;
+    position: center;
+    max-width:1140px;
+    margin:auto;
+}
+
+html, body {
+    height: 100%;
+}
+
+.navbar {
+    top:0px;
+    margin-bottom:10px;
+}
+
+.navbar-brand img {
+    width: 157px;
+    height: 60px;
 }
