--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -2,6 +2,17 @@
     ViewBag.Title = "Welcome";
 }
 
+<!-- parallax baground-->
+<div class="background-parallax">
+    <div class="headerBox">
+        <h1 class="headerText">
+            J-Cash Machine(Thailand)<br />
+            <span class="subHeaderText">A Global Solutions by JCM</span>
+        </h1>
+        
+    </div>
+</div>
+
 <div class="jumbotron">
     <h1>ASP.NET</h1>
     <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
@@ -29,3 +40,6 @@
         <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
     </div>
 </div>
+
+<!--Import Stylesheet -->
+<link rel="stylesheet" type="text/css" href="~/Content/custom.index.css" />
