--- a/JCashMachineThailand/Content/custom.layout.css
+++ b/JCashMachineThailand/Content/custom.layout.css
@@ -1,9 +1,10 @@
 ﻿body {
     padding-top: 0px;
-    position: center;
+    /*position: center;
     max-width:1140px;
-    margin:auto;
+    margin:auto;*/
 }
+
 
 html, body {
     height: 100%;
