--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -4,7 +4,7 @@
 
 <!-- parallax baground-->
 <div class="background-parallax">
-    <div class="headerBox">
+    <div class="container headerBox">
         <h1 class="headerText">
             J-Cash Machine(Thailand)<br />
             <span class="subHeaderText">A Global Solutions by JCM</span>
@@ -12,34 +12,48 @@
         
     </div>
 </div>
+<!--################3-->
+<div class="container-fluid text-center text-white bg-blueJCM">
+        <!-- Compary Introduction Section -->
+    <section id="introduce">
+        <div class="container-fluid">
+            <h1 class="font-smoothing" style="font-weight:bold">Who We Are?</h1>
+            <p class="p-15">
+                JCMThailand provides a wide range of products to meet the needs of every customer.
+                From initial design to final quality assurance processes, we make sure our goods are reliable and exceptional.
+                We’re proud to be one of the best-known names in the industry. Get in touch to see how you can benefit from our products.
+            </p>
+        </div>
+    </section>
 
-<div class="jumbotron">
-    <h1>ASP.NET</h1>
-    <p class="lead">ASP.NET is a free web framework for building great Web sites and Web applications using HTML, CSS and JavaScript.</p>
-    <p><a href="https://asp.net" class="btn btn-primary btn-lg">Learn more &raquo;</a></p>
+    <!-- Briefly Main Features -->
+    <div class="row">
+        <div class="col-sm-4 bg-info">
+            <div class="bg-light text-blue text-center">
+                <h2>Getting started</h2>
+                <p class="p-15">
+                    ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
+                    enables a clean separation of concerns and gives you full control over markup
+                    for enjoyable, agile development.
+                </p>
+                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+            </div>
+        </div>
+        <div class="col-sm-4 bg-primary mb-0">
+            <div class="bg-light text-body">
+                <h2>Get more libraries</h2>
+                <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
+                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+            </div>
+        </div>
+        <div class="col-sm-4 bg-success">
+            <div class="card">
+                <h2>Web Hosting</h2>
+                <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+            </div>
+        </div>
+    </div>
 </div>
-
-<div class="row">
-    <div class="col-md-4">
-        <h2>Getting started</h2>
-        <p>
-            ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-            enables a clean separation of concerns and gives you full control over markup
-            for enjoyable, agile development.
-        </p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Get more libraries</h2>
-        <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
-    </div>
-    <div class="col-md-4">
-        <h2>Web Hosting</h2>
-        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-        <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-    </div>
-</div>
-
-<!--Import Stylesheet -->
+<!-- Import Page Stylesheet -->
 <link rel="stylesheet" type="text/css" href="~/Content/custom.index.css" />
