added fatures card - the height of each column still can diffience base on content

--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -12,13 +12,13 @@
         
     </div>
 </div>
-<!--################3-->
-<div class="container-fluid text-center text-white bg-blueJCM">
-        <!-- Compary Introduction Section -->
+<!--################-->
+<div class="container-fluid text-center bg-blueJCM">
+    <!-- Compary Introduction Section -->
     <section id="introduce">
-        <div class="container-fluid">
+        <div class="container-fluid text-white">
             <h1 class="font-smoothing" style="font-weight:bold">Who We Are?</h1>
-            <p class="p-15">
+            <p class="p-15 p-3">
                 JCMThailand provides a wide range of products to meet the needs of every customer.
                 From initial design to final quality assurance processes, we make sure our goods are reliable and exceptional.
                 We’re proud to be one of the best-known names in the industry. Get in touch to see how you can benefit from our products.
@@ -26,31 +26,41 @@
         </div>
     </section>
 
+
     <!-- Briefly Main Features -->
-    <div class="row">
-        <div class="col-sm-4 bg-info">
-            <div class="bg-light text-blue text-center">
-                <h2>Getting started</h2>
-                <p class="p-15">
-                    ASP.NET MVC gives you a powerful, patterns-based way to build dynamic websites that
-                    enables a clean separation of concerns and gives you full control over markup
-                    for enjoyable, agile development.
-                </p>
-                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301865">Learn more &raquo;</a></p>
+    <div class="container-fluid pb-5">
+        <div class="row px-sm-0">
+            <div class="col-sm-4">
+                <div class="card border-0 p-0">
+                    <img class="card-img-top" src="~/Images/bg.jpg" />
+                    <div class="card-body">
+                        <h2 class="card-title">Web Hosting</h2>
+                        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                        You can easily find a web hosting company that offers the right mix of features and price for your applications
+                        You can easily find a web hosting company that offers the right mix of features and price for your applications
+                        <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-sm-4 bg-primary mb-0">
-            <div class="bg-light text-body">
-                <h2>Get more libraries</h2>
-                <p>NuGet is a free Visual Studio extension that makes it easy to add, remove, and update libraries and tools in Visual Studio projects.</p>
-                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301866">Learn more &raquo;</a></p>
+            <div class="col-sm-4">
+                <div class="card border-0">
+                    <img class="card-img-top" src="~/Images/bg.jpg" />
+                    <div class="card-body">
+                        <h2 class="card-title">Web Hosting</h2>
+                        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                        <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                    </div>
+                </div>
             </div>
-        </div>
-        <div class="col-sm-4 bg-success">
-            <div class="card">
-                <h2>Web Hosting</h2>
-                <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                <p><a class="btn btn-default" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+            <div class="col-sm-4">
+                <div class="card border-0">
+                    <img class="card-img-top" src="~/Images/bg.jpg" />
+                    <div class="card-body">
+                        <h2 class="card-title">Web Hosting</h2>
+                        <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                        <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                    </div>
+                </div>
             </div>
         </div>
     </div>
