--- a/JCashMachineThailand/Views/Shared/_Layout.cshtml
+++ b/JCashMachineThailand/Views/Shared/_Layout.cshtml
@@ -32,7 +32,7 @@
             </ul>
         </div>
     </nav>
-    <!--## Body Page ##-->
+    <!--## BODY Page ##-->
     <div class="container-fluid m-0 p-0">
         @RenderBody()
         <hr />
