--- a/JCashMachineThailand/Content/custom.index.css
+++ b/JCashMachineThailand/Content/custom.index.css
@@ -61,6 +61,10 @@
     .background-parallax {
         height: 300px;
     }
+    .container-fluid {
+        padding-left: 0;
+        padding-right: 0;
+    }
 }
 
 @media only screen and (max-width:520px) {
@@ -124,10 +128,6 @@
 
 .bg-blueJCM{
     background-color:#003862;
-}
-
-.color-white {
-    color: white;
 }
 
 #introduce {
