adjust midle screen margin

--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -1,69 +1,70 @@
 ﻿@{
     ViewBag.Title = "Welcome";
 }
+<section id="indexBody">
+    <!-- parallax baground-->
+    <div class="background-parallax">
+        <div class="container headerBox">
+            <h1 class="headerText">
+                J-Cash Machine(Thailand)<br />
+                <span class="subHeaderText">A Global Solutions by JCM</span>
+            </h1>
 
-<!-- parallax baground-->
-<div class="background-parallax">
-    <div class="container headerBox">
-        <h1 class="headerText">
-            J-Cash Machine(Thailand)<br />
-            <span class="subHeaderText">A Global Solutions by JCM</span>
-        </h1>
-        
-    </div>
-</div>
-<!--################-->
-<div class="container-fluid text-center bg-blueJCM">
-    <!-- Compary Introduction Section -->
-    <section id="introduce">
-        <div class="container-fluid text-white">
-            <h1 class="font-smoothing" style="font-weight:bold">Who We Are?</h1>
-            <p class="p-15 p-3">
-                JCMThailand provides a wide range of products to meet the needs of every customer.
-                From initial design to final quality assurance processes, we make sure our goods are reliable and exceptional.
-                We’re proud to be one of the best-known names in the industry. Get in touch to see how you can benefit from our products.
-            </p>
-        </div>
-    </section>
-
-
-    <!-- Briefly Main Features -->
-    <div class="container-fluid pb-5">
-        <div class="row px-sm-0">
-            <div class="col-sm-4">
-                <div class="card border-0 p-0">
-                    <img class="card-img-top" src="~/Images/bg.jpg" />
-                    <div class="card-body">
-                        <h2 class="card-title">Web Hosting</h2>
-                        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                        You can easily find a web hosting company that offers the right mix of features and price for your applications
-                        You can easily find a web hosting company that offers the right mix of features and price for your applications
-                        <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card border-0">
-                    <img class="card-img-top" src="~/Images/bg.jpg" />
-                    <div class="card-body">
-                        <h2 class="card-title">Web Hosting</h2>
-                        <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                        <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-4">
-                <div class="card border-0">
-                    <img class="card-img-top" src="~/Images/bg.jpg" />
-                    <div class="card-body">
-                        <h2 class="card-title">Web Hosting</h2>
-                        <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                        <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-                    </div>
-                </div>
-            </div>
         </div>
     </div>
-</div>
+    <!--################-->
+    <div class="container-fluid text-center bg-blueJCM">
+        <!-- Compary Introduction Section -->
+        <section id="introduce">
+            <div class="container-fluid text-white">
+                <h1 class="font-smoothing" style="font-weight:bold">Who We Are?</h1>
+                <p class="p-15 p-3">
+                    JCMThailand provides a wide range of products to meet the needs of every customer.
+                    From initial design to final quality assurance processes, we make sure our goods are reliable and exceptional.
+                    We’re proud to be one of the best-known names in the industry. Get in touch to see how you can benefit from our products.
+                </p>
+            </div>
+        </section>
+
+
+        <!-- Briefly Main Features -->
+        <div class="container-fluid pb-5">
+            <div class="row px-0 mx-0">
+                <div class="col-md-4">
+                    <div class="card border-0 p-0">
+                        <img class="card-img-top" src="~/Images/bg.jpg" />
+                        <div class="card-body">
+                            <h2 class="card-title">Web Hosting</h2>
+                            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                            You can easily find a web hosting company that offers the right mix of features and price for your applications
+                            You can easily find a web hosting company that offers the right mix of features and price for your applications
+                            <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0">
+                        <img class="card-img-top" src="~/Images/bg.jpg" />
+                        <div class="card-body">
+                            <h2 class="card-title">Web Hosting</h2>
+                            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                            <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0">
+                        <img class="card-img-top" src="~/Images/bg.jpg" />
+                        <div class="card-body">
+                            <h2 class="card-title">Web Hosting</h2>
+                            <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                            <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
 <!-- Import Page Stylesheet -->
 <link rel="stylesheet" type="text/css" href="~/Content/custom.index.css" />
