Completed Index layout

--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -9,11 +9,10 @@
                 J-Cash Machine(Thailand)<br />
                 <span class="subHeaderText">A Global Solutions by JCM</span>
             </h1>
-
         </div>
     </div>
     <!--################-->
-    <div class="container-fluid text-center bg-blueJCM">
+    <div class="container-fluid text-center bg-jcm-blue">
         <!-- Compary Introduction Section -->
         <section id="introduce">
             <div class="container-fluid text-white">
@@ -26,45 +25,93 @@
             </div>
         </section>
 
-
         <!-- Briefly Main Features -->
         <div class="container-fluid pb-5">
-            <div class="row px-0 mx-0">
-                <div class="col-md-4">
-                    <div class="card border-0 p-0">
-                        <img class="card-img-top" src="~/Images/bg.jpg" />
+            <div class="row p-0 m-0">
+                <div class="col-md-4 w-100">
+                    <div class="card border-0 h-100">
+                        <img class="card-img" src="~/Images/bg.jpg" />
                         <div class="card-body">
-                            <h2 class="card-title">Web Hosting</h2>
-                            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                            You can easily find a web hosting company that offers the right mix of features and price for your applications
-                            You can easily find a web hosting company that offers the right mix of features and price for your applications
-                            <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card border-0">
-                        <img class="card-img-top" src="~/Images/bg.jpg" />
-                        <div class="card-body">
-                            <h2 class="card-title">Web Hosting</h2>
-                            <p>You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                            <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
-                        </div>
-                    </div>
-                </div>
-                <div class="col-md-4">
-                    <div class="card border-0">
-                        <img class="card-img-top" src="~/Images/bg.jpg" />
-                        <div class="card-body">
-                            <h2 class="card-title">Web Hosting</h2>
+                            <h3 class="card-title color-jcm-blue mb-3">Career</h3>
+                            <h5 class="card-subtitle mb-3">subtitle</h5>
                             <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
-                            <p><a class="btn btn-primary" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                            <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0 h-100">
+                        <img class="card-img" src="~/Images/bg.jpg" />
+                        <div class="card-body">
+                            <h3 class="card-title color-jcm-blue mb-3">Career</h3>
+                            <h5 class="card-subtitle mb-3">subtitle</h5>
+                            <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                            <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-4">
+                    <div class="card border-0 h-100">
+                        <img class="card-img" src="~/Images/bg.jpg" />
+                        <div class="card-body">
+                            <h3 class="card-title color-jcm-blue mb-3">Career</h3>
+                            <h5 class="card-subtitle mb-3">subtitle</h5>
+                            <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
+                            <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
                         </div>
                     </div>
                 </div>
             </div>
         </div>
     </div>
+    <!-- Contact -->
+    <section id="contact">
+        <div class="container-fluid p-md-5">
+            <div class="row  p-0 m-0 bg-jcm-contact">
+                <div class="col-md-6 pt-3 border">
+                    <div class="card text-center border-0 bg-jcm-contact">
+                        <h3 class="card-title color-jcm-blue p-3">Contact Us</h3>
+                        <h5 class="card-subtitle pb-3">J-Cash Machine (Thailand) Co.,Ltd.</h5>
+                        <p>
+                            42 Tower, Room701, 7th Floor,<br />
+                            65 Soi Sukhumvit 42 (Kluaynamthai),<br />
+                            Sukhumvit Rd., Prakanong Klongtoey,<br />
+                            Bangkok 10110 Thailand<br />
+                            <br />
+                            t.sarawoot@jcm-thai.co.th<br />
+                            <br />
+                            Tel. +66 2 712 3155-6<br />
+                            Fax. +66 2 712 3157
+                        </p>
+                    </div>
+                </div>
+                <div class="col-md-6 py-3">
+                    <form class=" mx-xl-5 pt-3">
+                        <div class="form-group">
+                            <div class="form-row justify-content-center">
+                                <div class="col-md">
+                                    <input type="text" class="form-control mb-2 max-width-768px btn-outline-dark" id="name" placeholder="Name" />
+                                </div>
+                                <div class="col-md">
+                                    <input type="email" class="form-control mb-2 max-width-768px btn-outline-dark" id="email" placeholder="Email" />
+                                </div>
+                            </div>
+                            <input type="text" class="form-control mb-2 max-width-768px btn-outline-dark" id="subject" placeholder="Subject" />
+                            <input type="text" class="form-control mb-2 max-width-768px btn-outline-dark" id="phone" placeholder="Phone" />
+                            <input type="text" class="form-control mb-2 max-width-768px btn-outline-dark" id="address" placeholder="Address" />
+                            <textarea class="form-control mb-3 max-width-768px btn-outline-dark" id="message" rows="3" placeholder="Message"></textarea>
+                            <button type="submit" class="btn-dark w-100">Send</button>
+                        </div>
+                    </form>
+                </div>
+            </div>
+            <div id="googleMap" class="row p-0 m-0">
+                <div class="bg-secondary w-100" style="height:400px">
+                    <p>JCM-T map</p>
+                </div>
+            </div>
+        </div>
+    </section>
 </section>
 <!-- Import Page Stylesheet -->
 <link rel="stylesheet" type="text/css" href="~/Content/custom.index.css" />
