--- a/JCashMachineThailand/Views/Shared/_Layout.cshtml
+++ b/JCashMachineThailand/Views/Shared/_Layout.cshtml
@@ -3,7 +3,7 @@
 <head>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>@ViewBag.Title - JCM Thailand</title>
+    <title>@ViewBag.Title | JCM Thailand</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
     <link rel="stylesheet" type="text/css" href="~/Content/custom.layout.css" />
@@ -37,7 +37,7 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - My ASP.NET Application</p>
+            <p class="px-5">&copy; @DateTime.Now.Year - Copyright | J-Cash Machine (Thailand).Co.,Ltd.</p>
         </footer>
     </div>
     <!--## Script Import ##-->
