--- a/JCashMachineThailand/Content/custom.index.css
+++ b/JCashMachineThailand/Content/custom.index.css
@@ -5,7 +5,7 @@
     /* Image */
     background-image: url('../Images/bg.jpg');
     /* Set a specific height */
-    height: 400px;
+    height: 520px;
     /* Create the parallax scrolling effect */
     background-attachment: fixed;
     background-position: center;
@@ -16,23 +16,25 @@
 
 .headerBox {
     margin-left: 8%;
-    width: 640px;
+    width: 520px;
     position: absolute;
     pointer-events: none;
     top: 200px;
     /*height: 200px;*/
     word-wrap: break-word;
     text-align: start;
+    padding-top: 1em;
 }
 
 .headerText {
     color: white;
     position: absolute;
     /*font-family: Arial, Helvetica, sans-serif;*/
-    font-family: poppins-semibold,poppins,sans-serif ;
-    font-size: 64px;
+    font-family: poppins-semibold,poppins,sans-serif;
+    font-size: 72px;
     line-height: 1.2em;
-    font-weight:bold;
+    font-weight: bold;
+    
 }
 
 .subHeaderText {
@@ -126,8 +128,15 @@
     -webkit-font-smoothing: antialiased;
 }
 
-.bg-blueJCM{
-    background-color:#003862;
+.bg-jcm-blue {
+    background-color: #003862;
+}
+.color-jcm-blue { /*#003862*/
+    color: #003862;
+    /*color:blue;*/
+}
+.bg-jcm-contact {
+    background-color: #EAF5F7;
 }
 
 #introduce {
@@ -136,3 +145,8 @@
     padding-left: 5%;
     padding-right: 5%;
 }
+
+.max-width-768px {
+    max-width:768px;
+}
+
