--- a/JCashMachineThailand/Views/Home/Index.cshtml
+++ b/JCashMachineThailand/Views/Home/Index.cshtml
@@ -16,7 +16,7 @@
         <!-- Compary Introduction Section -->
         <section id="introduce">
             <div class="container-fluid text-white">
-                <h1 class="font-smoothing" style="font-weight:bold">Who We Are?</h1>
+                <h1 id="whoweare" class="font-smoothing" style="font-weight:bold">Who We Are?</h1>
                 <p class="p-15 p-3">
                     JCMThailand provides a wide range of products to meet the needs of every customer.
                     From initial design to final quality assurance processes, we make sure our goods are reliable and exceptional.
@@ -24,15 +24,17 @@
                 </p>
             </div>
         </section>
+    </div>
 
+    <div id="feature" class="container-fluid text-center bg-jcm-blue">
         <!-- Briefly Main Features -->
         <div class="container-fluid pb-5">
             <div class="row p-0 m-0">
                 <div class="col-md-4 w-100">
-                    <div class="card border-0 h-100">
+                    <div id="product" class="card border-0 h-100">
                         <img class="card-img" src="~/Images/bg.jpg" />
                         <div class="card-body">
-                            <h3 class="card-title color-jcm-blue mb-3">Career</h3>
+                            <h3 class="card-title color-jcm-blue mb-3">Product</h3>
                             <h5 class="card-subtitle mb-3">subtitle</h5>
                             <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
                             <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
@@ -40,10 +42,10 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card border-0 h-100">
+                    <div id="service" class="card border-0 h-100">
                         <img class="card-img" src="~/Images/bg.jpg" />
                         <div class="card-body">
-                            <h3 class="card-title color-jcm-blue mb-3">Career</h3>
+                            <h3 class="card-title color-jcm-blue mb-3">Service</h3>
                             <h5 class="card-subtitle mb-3">subtitle</h5>
                             <p class="card-text">You can easily find a web hosting company that offers the right mix of features and price for your applications.</p>
                             <p><a class="btn btn-info" href="https://go.microsoft.com/fwlink/?LinkId=301867">Learn more &raquo;</a></p>
@@ -51,7 +53,7 @@
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card border-0 h-100">
+                    <div id="career" class="card border-0 h-100">
                         <img class="card-img" src="~/Images/bg.jpg" />
                         <div class="card-body">
                             <h3 class="card-title color-jcm-blue mb-3">Career</h3>
@@ -105,8 +107,8 @@
                     </form>
                 </div>
             </div>
-            <div class="row p-0 m-0 bg-secondary w-100" style="height:400px">
-                <p id="googleMap">JCM-T map</p>
+            <div id="mapArea" class="row p-0 m-0 bg-secondary w-100" style="height:400px; word-break:break-all  ">
+                <p>JCM-T map</p>
             </div>
         </div>
     </section>
@@ -117,18 +119,33 @@
 @section scripts{
 <script>
     $(document).ready(function () {
-        
-        //$("#googleMap").click(function (e) {
-        //    $("#googleMap").append("<h2>I am a Header2</h2>");
-        //});
-
-
+        //by scroll
+        $(window).scroll(function () {
+            //dispaly feature
+            var featureSect = document.getElementById('feature');
+            var isView = isAnyPartOfElementInViewport(featureSect);
+            $('#fix-box').html(isView);
+            if (isView) {
+                $("#product").show(300,);
+                $("#service").delay(200).show(300);
+                $("#career").delay(500).show(300);
+            }
+        });
     });
+    // https://gist.github.com/davidtheclark/5515733
+    function isAnyPartOfElementInViewport(el) {
 
-    // Is this element visible onscreen? 
-    //var visible = $("#googleMap").visible(); 
-    // Set the visible status into the span. 
-    //$(this).find('span').text(visible ? 'Onscreen' : 'Offscreen').toggleClass('visible', visible);
+        const rect = el.getBoundingClientRect();
+        // DOMRect { x: 8, y: 8, width: 100, height: 100, top: 8, right: 108, bottom: 108, left: 8 }
+        const windowHeight = (window.innerHeight || document.documentElement.clientHeight);
+        const windowWidth = (window.innerWidth || document.documentElement.clientWidth);
+
+        // http://stackoverflow.com/questions/325933/determine-whether-two-date-ranges-overlap
+        const vertInView = (rect.top <= windowHeight) && ((rect.top + rect.height) >= 0);
+        const horInView = (rect.left <= windowWidth) && ((rect.left + rect.width) >= 0);
+
+        return (vertInView && horInView);
+    }
 </script>
 }
 
